--- a/Job-Application-Tracker/src/main/resources/application.properties
+++ b/Job-Application-Tracker/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Job-Application-Tracker
+spring.datasource.url=jdbc:mysql://0.0.0.0:3307/applicationTracker?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=test123
+spring.jpa.hibernate.ddl-auto=update
+server.port=8090
